test/fail/fail-str.js

var seneca = require('../..')()

seneca.fail( 'foo' )
